# crypto-portfolio

./: .env.example  .gitignore  COMMANDS.md  analyze_tiers.py  pyproject.toml
.claude/: settings.local.json
log/: 2026-05-04_candidates.jsonl  2026-05-04_trades.jsonl  2026-05-05_candidates.jsonl  2026-05-05_trades.jsonl  2026-05-06_candidates.jsonl  2026-05-06_trades.jsonl  2026-05-07_candidates.jsonl  2026-05-07_trades.jsonl  2026-05-08_candidates.jsonl  2026-05-08_trades.jsonl  2026-05-09_candidates.jsonl  2026-05-10_candidates.jsonl  2026-05-11_candidates.jsonl  2026-05-11_trades.jsonl  2026-05-12_candidates.jsonl  2026-05-12_trades.jsonl  2026-05-13_trades.jsonl  2026-05-14_candidates.jsonl  2026-05-14_trades.jsonl
src/crypto_portfolio/: __main__.py  binance.py  config.py  display.py  indicators.py  log_util.py  models.py  portfolio.py  sentiment.py  storage.py
src/crypto_portfolio/commands/: __init__.py  _market.py  analysis.py  live_cmd.py  ml_cmd.py  portfolio.py  scanner.py  scout_cmd.py  setup.py  sim_cmd.py  trading.py
src/crypto_portfolio/metrics/: compute.py
src/crypto_portfolio/ml/: brain.py  features.py  predictor.py  trainer.py
tests/: test_pump_filter.py
