[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-portfolio"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "keyring>=25.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.4",
    "lightgbm>=4.0",
    "joblib>=1.3",
    "anthropic>=0.40",
    "openai>=1.0",
]

[project.scripts]
crypto-portfolio = "crypto_portfolio.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
